--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -729,9 +729,41 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 
 |`* * *` |user |find a person by name |locate details of persons without having to go through the entire list
 
+|`* * *` |user |add birth dates |wish people on their birthdays
+
+|`* * *` |user with many persons in the address book |sort persons by name |locate a person easily
+
+|`* * *` |user with many persons in the address book |list people by tags |locate a person easily
+
 |`* *` |user |hide link:#private-contact-detail[private contact details] by default |minimize chance of someone else seeing them by accident
 
-|`*` |user with many persons in the address book |sort persons by name |locate a person easily
+|`* *` |user |add contacts from pre-existing address book |save time without entering the same contacts again
+
+|`* *` |user |auto-format phone number |easily figure out the country code or phone number
+
+|`* *` |user with many persons in the address book |set password to the address book |keep my contacts safe from others
+
+|`* *` |user with many persons in the address book |find a person by phone |locate details of a person without having to go through the entire list
+
+|`* *` |user with many persons in the address book |make groups of contacts |group relevant contacts together
+
+|`*` |user |add a picture of the person |make it easier for myself to identify the person
+
+|`*` |user |add multiple phone numbers to a person |know multiple ways to contact a person
+
+|`*` |user |enter the location for storage file |store my contacts anywhere I want
+
+|`*` |user with many persons in the address book |add job title and department to a person |know the profession of each entry
+
+|`*` |user with many persons in the address book |find persons by group |locate details of persons belonging to particular group
+
+|`*` |user with many persons in the address book |see the number of searches performed on a person |see the people I search for the most
+
+|`*` |user with many persons in the address book |add connections to a person |connect different people in the list
+
+|`*` |user with many persons in the address book |see the number of connections made by person |see the people with most connections
+
+|`*` |user |add a person with incomplete details |add a person and fill incomplete entries later
 |=======================================================================
 
 {More to be added}
