UiClassDiagram.png: update Ui Class diagram to add PersonDetailsPanel UserGuide.adoc: add details about Ui enhancement DeveloperGuide.adoc: update heading level for Design Considerations for list mechanism

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -384,7 +384,7 @@ The following activity diagram shows what happens when a user executes a new lis
 
 image::ListCommandActivityDiagram.png[width="400"]
 
-=== Design Considerations
+==== Design Considerations
 
 **Aspect:** Implementation of `ListCommand` +
 **Alternative 1 (current choice):** Add a new class ListCommandParser +
