--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,7 @@ ifndef::env-github[]
 image::images/Ui.png[width="600"]
 endif::[]
 
-* This is a desktop address book application. This application allows users to store important information about the people they care about. It is meant for people who have plenty of contacts and who want to conveniently store them and find information. It is capable of storing different types of information such as name, phone number and address of a person. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
+* This is a desktop address book application. This application is targeted for the businessmen who intend to keep their business contacts in a single place. It is capable of storing different types of information such as name, phone number, birthday and address of a person. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
 
 
 == Site Map
