Update test script for list tag command

--- a/src/test/data/ManualTesting/[T12-B3][People.connect]TestScript.adoc
+++ b/src/test/data/ManualTesting/[T12-B3][People.connect]TestScript.adoc
@@ -296,7 +296,7 @@ No person with given tags found.
 ---
 `list t/friends` +
 ```
-Listed all persons
+Listed all persons with tag: [friends]
 ```
 
 === Sort
